fix: css overflow

--- a/src/app/components/user-results-table/user-results-table.component.scss
+++ b/src/app/components/user-results-table/user-results-table.component.scss
@@ -124,9 +124,9 @@ tr.element-row:not(.expanded-row):active {
 }
 
 .hint {
-  margin-right: 1rem;
+  margin-left: 1rem;
   color: var(--secondary-grey2);
   font-size: 0.7rem;
   font-style: italic;
-  text-align: end;
+  text-align: start;
 }
