--- a/src/app/models/dialog-module/user-results-dialog/user-results-dialog.component.scss
+++ b/src/app/models/dialog-module/user-results-dialog/user-results-dialog.component.scss
@@ -77,4 +77,5 @@ table {
 
 .mat-dialog-content {
   padding: 0;
+  overflow: visible;
 }
